<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="title">Adam\'s Killer Apps</string>
    <string name="action_settings">Options</string>

    <string name="spotify_text">SPOTIFY STREAMER</string>
    <string name="scores_text">SCORES APP</string>
    <string name="library_text">LIBRARY APP</string>
    <string name="build_text">BUILD IT BIGGER</string>
    <string name="reader_text">XYZ Reader APP</string>
    <string name="capstone_text">CAPSTONE: MY APP</string>
</resources>
